<resources>
    <string name="app_name">Way2Go</string>
    <string name="input_string">input the following fields</string>
    <string name="name_bob">Name(Bob)</string>
    <string name="date_of_event_00_00_00">Date of event (00/00/00)</string>
    <string name="time_of_date_00_00">Time of date (00:00)</string>
    <string name="email_bob_gmail_com">Email (Bob@gmail.com)</string>
    <string name="phone_000_0000000">phone (000-0000000)</string>
    <string name="submit">Submit</string>
    <string name="manage_an_event">Manage an event</string>
    <string name="a_Participant">a Participant</string>
    <string name="Way_2_go">Way2go</string>
    <string name="enter_your_num_event">Enter your num event</string>
    <string name="num_event">num event</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="price">price</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_app_map">Map</string>
</resources>
